	  passwd file
	- Bug #742: Wrong status code on access denials if delay_access
	  is used. Most notably 407 instead of 403 could be returned.
	- Bug #763: segfault if using ntlm in http_reply_access
	- Bug #638: assertion error if using proxy_auth in delay_access
	- Bug #756: segmentation fault if using ntlm proxy_auth in delay_access

Changes to squid-2.5.STABLE3 (25 May 2003):

	- Bug #573: Occational false negatives in external acl lookups
	- Bug #577: assertion failed: cbdata.c:224: "c->y == c" when
	  external_acl helpers crashes
	- Bug #590: Squid may hang or behave oddly on shutdown while
	  requests is being processed.
	- Bug #590: external acl lookups does not deal well with queue
	  overload
	- cache_effective_user documentation update
	- cache_peer documentation update for htcp and carp
	- Bug #600: The example header_access paranoid setting is
	  missing WWW-Authenticate
	- Bug #605: Segmentation fault in idnsGrokReply() on certain
	  platforms
	- Fixes to build properly on AIX 5
	- Bug #574: wb_group updated to version 1.1 to make group names
	  case insensitive and correct a segfault issue in the helper
	- SNMP mib updates to make cacheNumObjCount,
	  cacheCurrentUnlinkRequests, cacheCurrentSwapSize and cacheClients
	  correctly report as gauges (was reporting as counters).
	- Woraround for --enable-ssl Kerberos issue on RedHat 9
	- Bug #579: Close and repopen log files on "squid -k reconfigure"
	- Bug #598: squid_ldap_auth could segfault if LDAP server is
	  unavailable
	- Bug #609,#612: msntauth helper fixes in dealing with large
 	  or non-existing allow/deny user files.
	- Bug #620: acl ident REQUIRED matches even if the ident lookup fails
	- Bug #432: reply_body_max_size fails with ident or proxy_auth acls
	  and also fails to block large objects where the content-length
	  is not known
	- Bug #606: Basic auth looping and gets stuck at high CPU usage when
	  multiple proxy_auth ACLs combined in one line and login fails.