@@ -195,6 +195,10 @@ name="ChangeLog"> file for details.
 	<item>Most Squid generated errors are now logged as TCP_DENIED/XXX
 	rather than TCP_MISS/XXX or NONE/XXX. This to work around issues
 	relating to access controls.
+	<item>external_acl_type concurrency= option renamed to children=
+	to prepare for Squid-3 upgrade. The old syntax is still accepted
+	but you may want to upgrade your configuration now to save you
+	from the trouble when upgrading to Squid-3 later.
 	<item>a large number of minor bugfixes. See the list of <url
 	url="http://www.squid-cache.org/Versions/v2/2.5/bugs/#STABLE3"
 	name="squid-2.5.STABLE1 patches"> and the <url url="ChangeLog"
