@@ -1486,8 +1486,9 @@ DOC_START
 	  negative_ttl=n
 	  		TTL for cached negative lookups (default same
 	  		as ttl)
-	  concurrency=n	Concurrency level / number of processes spawn
+	  children=n	Concurrency level / number of processes spawn
 			to service external acl lookups of this type.
+			Note: see compatibility note below
 	  cache=n	result cache size, 0 is unbounded (default)
 	
 	FORMAT specifications
@@ -1527,6 +1528,15 @@ DOC_START
 	Keyword values need to be enclosed in quotes if they may contain
 	whitespace, or the whitespace escaped using \. Any quotes or \
 	characters within the keyword value must be \ escaped.
+
+	Compatibility Note: The children= option was named concurrency= in
+	Squid-2.5.STABLE3 and earlier and such syntax is still accepted to
+	keep compatibility within the Squid-2.5 release. However, the meaning
+	of concurrency= option has changed in Squid-3 and the old syntax of
+	the directive is therefore depreated from Squid-2.5.STABLE4 and later.
+	If you want to be able to easily downgrade to earlier Squid-2.5
+	releases then you may want to continue using the old name, if not
+	please use the new name.
 DOC_END
 
 COMMENT_START
